--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.21'
+    ext.kotlin_version = '1.2.40'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -28,7 +28,7 @@ task clean(type: Delete) {
 
 ext {
     //dependencies
-    google = "27.0.2"
+    google = "27.1.1"
     dagger = "2.14.1"
     retrofit = "2.3.0"
     okhttp = "3.9.1"
@@ -41,6 +41,7 @@ ext {
     espresso = "3.0.1"
     testRunner = "1.0.1"
     room = "1.0.0"
-    fastAdapter = "3.0.5@aar"
+    fastAdapter = "3.2.4@aar"
+    revealLayout = "1.4.1"
 
 }
