--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 27
@@ -51,11 +52,6 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:$rootProject.ext.rxjava"
     implementation "io.reactivex.rxjava2:rxandroid:$rootProject.ext.rxandroid"
     implementation "com.jakewharton.timber:timber:$rootProject.ext.timber"
-
-    //db
-    implementation "android.arch.persistence.room:runtime:$rootProject.ext.room"
-    implementation "android.arch.persistence.room:rxjava2:$rootProject.ext.room"
-    kapt "android.arch.persistence.room:compiler:$rootProject.ext.room"
 
     //google
     implementation "com.android.support:appcompat-v7:$rootProject.ext.google"
